# usb_usb_manager

./: AGENTS.md  OAT.xml  README.md  README_zh.md  bundle.json  hisysevent.yaml  usb_manager.patch  usbmgr.gni
etc/: BUILD.gn
etc/param/: BUILD.gn  usb_service.para  usb_service.para.dac
interfaces/innerkits/: BUILD.gn  IUsbServer.idl  UsbServerTypes.idl
services/: BUILD.gn  usb_service.cfg  usbservice.map
services/native/include/: serial_device_identity.h  serial_manager.h  usb_accessory_manager.h  usb_bulkcallback_impl.h  usb_connection_notifier.h  usb_descriptor_parser.h  usb_device_manager.h  usb_device_manager_test.h  usb_function_switch_window.h  usb_host_manager.h  usb_manager_subscriber.h  usb_mass_storage_notification.h  usb_port_manager.h  usb_report_sys_event.h  usb_right_database.h  usb_right_db_helper.h  usb_right_manager.h  usb_security_report.h  usb_server_event_handler.h  usb_service.h  usb_service_subscriber.h  usb_timer_wraper.h  usb_trace.h  usb_transfer_callback_impl.h  usbd_bulkcallback_impl.h  usbd_transfer_callback_impl.h  usbd_type.h
services/native/src/: serial_manager.cpp  usb_accessory_manager.cpp  usb_bulkcallback_impl.cpp  usb_connection_notifier.cpp  usb_descriptor_parser.cpp  usb_device_manager.cpp  usb_device_manager_test.cpp  usb_function_switch_window.cpp  usb_host_manager.cpp  usb_manager_subscriber.cpp  usb_mass_storage_notification.cpp  usb_port_manager.cpp  usb_report_sys_event.cpp  usb_right_database.cpp  usb_right_db_helper.cpp  usb_right_manager.cpp  usb_security_report.cpp  usb_service.cpp  usb_service_subscriber.cpp  usb_timer_wraper.cpp  usb_transfer_callback_impl.cpp  usbd_bulkcallback_impl.cpp  usbd_transfer_callback_impl.cpp
services/zidl/include/: usb_server_proxy.h  usb_server_stub.h  usb_service_ipc_interface_code.h
services/zidl/src/: usb_srv_proxy.cpp  usb_srv_stub.cpp
test/benchmarktest/: BUILD.gn  usbmgr_benchmark_accessory_test.cpp  usbmgr_benchmark_device_test.cpp  usbmgr_benchmark_host_test.cpp  usbmgr_benchmark_manage_test.cpp  usbmgr_benchmark_port_test.cpp  usbmgr_benchmark_serial_test.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/usbmgr_fuzzer/: usbmgr_fuzzer.cpp  usbmgr_fuzzer.h
test/fuzztest/usbmgraddaccessoryright_fuzzer/: project.xml  usbmgraddaccessoryright_fuzzer.cpp  usbmgraddaccessoryright_fuzzer.h
test/fuzztest/usbmgraddright_fuzzer/: usbmgraddright_fuzzer.cpp  usbmgraddright_fuzzer.h
test/fuzztest/usbmgraddserialright_fuzzer/: usbmgraddserialright_fuzzer.cpp  usbmgraddserialright_fuzzer.h
test/fuzztest/usbmgrattachkerneldriver_fuzzer/: usbmgrattachkerneldriver_fuzzer.cpp  usbmgrattachkerneldriver_fuzzer.h
test/fuzztest/usbmgrbulkcancel_fuzzer/: usbmgrbulkcancel_fuzzer.cpp
test/fuzztest/usbmgrbulkread_fuzzer/: usbmgrbulkread_fuzzer.cpp
test/fuzztest/usbmgrbulktransfer_fuzzer/: usbmgrbulktransfer_fuzzer.cpp  usbmgrbulktransfer_fuzzer.h
test/fuzztest/usbmgrbulktransferwrite_fuzzer/: usbmgrbulktransferwrite_fuzzer.cpp
test/fuzztest/usbmgrbulkwrite_fuzzer/: usbmgrbulkwrite_fuzzer.cpp
test/fuzztest/usbmgrcancelaccessoryright_fuzzer/: project.xml  usbmgrcancelaccessoryright_fuzzer.cpp  usbmgrcancelaccessoryright_fuzzer.h
test/fuzztest/usbmgrcancelserialright_fuzzer/: usbmgrcancelserialright_fuzzer.cpp  usbmgrcancelserialright_fuzzer.h
test/fuzztest/usbmgrcanceltransfer_fuzzer/: usbmgrcanceltransfer_fuzzer.cpp  usbmgrcanceltransfer_fuzzer.h
test/fuzztest/usbmgrclaiminterface_fuzzer/: usbmgrclaiminterface_fuzzer.cpp
test/fuzztest/usbmgrclearhalt_fuzzer/: usbmgrclearhalt_fuzzer.cpp  usbmgrclearhalt_fuzzer.h
test/fuzztest/usbmgrclose_fuzzer/: usbmgrclose_fuzzer.cpp
test/fuzztest/usbmgrcloseaccessory_fuzzer/: project.xml  usbmgrcloseaccessory_fuzzer.cpp  usbmgrcloseaccessory_fuzzer.h
test/fuzztest/usbmgrcontroltransfer_fuzzer/: usbmgrcontroltransfer_fuzzer.cpp
test/fuzztest/usbmgrdatashareinsert_fuzzer/: usbmgrdatashareinsert_fuzzer.cpp  usbmgrdatashareinsert_fuzzer.h
test/fuzztest/usbmgrdetachkerneldriver_fuzzer/: usbmgrdetachkerneldriver_fuzzer.cpp  usbmgrdetachkerneldriver_fuzzer.h
test/fuzztest/usbmgrex_fuzzer/: usbmgrex_fuzzer.cpp  usbmgrex_fuzzer.h
test/fuzztest/usbmgrgetaccessorylist_fuzzer/: project.xml  usbmgrgetaccessorylist_fuzzer.cpp  usbmgrgetaccessorylist_fuzzer.h
test/fuzztest/usbmgrgetcurrentfunctions_fuzzer/: usbmgrgetcurrentfunctions_fuzzer.cpp  usbmgrgetcurrentfunctions_fuzzer.h
test/fuzztest/usbmgrgetdevicespeed_fuzzer/: usbmgrgetdevicespeed_fuzzer.cpp
test/fuzztest/usbmgrgetfiledescriptor_fuzzer/: usbmgrgetfiledescriptor_fuzzer.cpp
test/fuzztest/usbmgrgetinterfacestatus_fuzzer/: usbmgrgetinterfacestatus_fuzzer.cpp  usbmgrgetinterfacestatus_fuzzer.h
test/fuzztest/usbmgrgetports_fuzzer/: usbmgrgetports_fuzzer.cpp  usbmgrgetports_fuzzer.h
test/fuzztest/usbmgrgetrawdescriptors_fuzzer/: usbmgrgetrawdescriptors_fuzzer.cpp
test/fuzztest/usbmgrgetsupportedmodes_fuzzer/: usbmgrgetsupportedmodes_fuzzer.cpp
test/fuzztest/usbmgrhasaccessoryright_fuzzer/: usbmgrhasaccessoryright_fuzzer.cpp  usbmgrhasaccessoryright_fuzzer.h
test/fuzztest/usbmgrhasright_fuzzer/: usbmgrhasright_fuzzer.cpp
test/fuzztest/usbmgrhasserialright_fuzzer/: usbmgrhasserialright_fuzzer.cpp  usbmgrhasserialright_fuzzer.h
test/fuzztest/usbmgrmanagedevice_fuzzer/: usbmgrmanagedevice_fuzzer.cpp  usbmgrmanagedevice_fuzzer.h
test/fuzztest/usbmgrmanagedevicepolicy_fuzzer/: usbmgrmanagedevicepolicy_fuzzer.cpp  usbmgrmanagedevicepolicy_fuzzer.h
test/fuzztest/usbmgrmanageglobalinterface_fuzzer/: usbmgrmanageglobalinterface_fuzzer.cpp  usbmgrmanageglobalinterface_fuzzer.h
test/fuzztest/usbmgrmanageinterfacetype_fuzzer/: usbmgrmanageinterfacetype_fuzzer.cpp  usbmgrmanageinterfacetype_fuzzer.h
test/fuzztest/usbmgropenaccessory_fuzzer/: project.xml  usbmgropenaccessory_fuzzer.cpp  usbmgropenaccessory_fuzzer.h
test/fuzztest/usbmgropendevice_fuzzer/: project.xml  usbmgropendevice_fuzzer.cpp  usbmgropendevice_fuzzer.h
test/fuzztest/usbmgrparallelize_fuzzer/: usbmgrparallelize_fuzzer.cpp  (+1 more)
test/tool/: .BUILD.gn.swp  BUILD.gn  usb_function_port_test.cpp  usb_function_test.cpp
(+524 files in other folders)
