# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("./../usbmgr.gni")

config("usbsrv_private_config") {
  include_dirs = [ "${usb_manager_path}/interfaces/innerkits/native/include" ]
}

config("usbsrv_public_config") {
  include_dirs = [
    "native/include",
    "${usb_manager_path}/services/zidl/include",
    "${usb_manager_path}/utils/native/include",
  ]
}

ohos_shared_library("usbservice") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  install_enable = true
  defines = [ "SERIAL_MOCK" ]
  sources = [
    "${usb_manager_path}/services/zidl/src/usb_srv_stub.cpp",
    "${utils_path}/native/src/struct_parcel.cpp",
    "${utils_path}/native/src/usb_settings_datashare.cpp",
    "native/src/serial_manager.cpp",
    "native/src/usb_accessory_manager.cpp",
    "native/src/usb_descriptor_parser.cpp",
    "native/src/usb_device_manager.cpp",
    "native/src/usb_function_switch_window.cpp",
    "native/src/usb_host_manager.cpp",
    "native/src/usb_port_manager.cpp",
    "native/src/usb_report_sys_event.cpp",
    "native/src/usb_right_database.cpp",
    "native/src/usb_right_db_helper.cpp",
    "native/src/usb_right_manager.cpp",
    "native/src/usb_serial_reader.cpp",
    "native/src/usb_service.cpp",
    "native/src/usb_service_subscriber.cpp",
    "native/src/usbd_bulkcallback_impl.cpp",
    "native/src/usbd_transfer_callback_impl.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":usbsrv_private_config",
  ]

  public_configs = [ ":usbsrv_public_config" ]

  defines = []

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "drivers_interface_usb:libserial_proxy_1.0",
    "drivers_interface_usb:libusb_proxy_1.1",
    "drivers_interface_usb:libusb_proxy_1.2",
    "drivers_interface_usb:serial_idl_headers",
    "drivers_peripheral_usb:libserial_interface_service_1.0",
    "drivers_peripheral_usb:libusb_interface_service_1.2",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbeget_proxy",
    "init:libbegetutil",
    "ipc:ipc_single",
    "memmgr:memmgrclient",
    "napi:ace_napi",
    "os_account:os_account_innerkits",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  if (usb_manager_feature_pop_up_func_switch_model) {
    defines += [ "USB_FUNC_SWITCH_MODE" ]
  }
  shlib_type = "sa"
  version_script = "usbservice.map"
  subsystem_name = "usb"
  part_name = "usb_manager"
}

ohos_prebuilt_etc("usb_service.init") {
  source = "usb_service.cfg"
  relative_install_dir = "init"
  subsystem_name = "usb"
  part_name = "usb_manager"
}
