# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("./../../usbmgr.gni")

ohos_prebuilt_etc("usb_service.para") {
  source = "usb_service.para"
  subsystem_name = "usb"
  part_name = "usb_manager"
  module_install_dir = "etc/param"
}

ohos_prebuilt_etc("usb_service.para.dac") {
  source = "usb_service.para.dac"
  subsystem_name = "usb"
  part_name = "usb_manager"
  module_install_dir = "etc/param"
}

group("usb_param_files") {
  deps = [
    ":usb_service.para",
    ":usb_service.para.dac",
  ]
}
