# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("./../../usbmgr.gni")

module_output_path = "${usb_manager_part_name}/usb_benchmark_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${usb_manager_path}/test/common/include/",
    "${usb_manager_path}/test/native/service_unittest/include/",
  ]
}

ohos_benchmarktest("usbmgr_host_test") {
  module_out_path = module_output_path

  sources = [
    "../native/service_unittest/src/usb_common_test.cpp",
    "usbmgr_benchmark_host_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "${usb_manager_path}/services:usbservice",
  ]

  if (is_standard_system) {
    external_deps = [
      "ability_base:want",
      "ability_runtime:ability_manager",
      "access_token:libaccesstoken_sdk",
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
      "bundle_framework:appexecfwk_base",
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "drivers_interface_usb:libusb_proxy_1.2",
      "drivers_interface_usb:usb_idl_headers_1.2",
      "hilog:libhilog",
      "ipc:ipc_single",
      "safwk:system_ability_fwk",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "benchmark:benchmark",
    "googletest:gtest_main",
  ]
}

ohos_benchmarktest("usbmgr_device_test") {
  module_out_path = module_output_path

  sources = [
    "../native/service_unittest/src/usb_common_test.cpp",
    "usbmgr_benchmark_device_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "${usb_manager_path}/services:usbservice",
  ]

  if (is_standard_system) {
    external_deps = [
      "ability_base:want",
      "ability_runtime:ability_manager",
      "access_token:libaccesstoken_sdk",
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
      "bundle_framework:appexecfwk_base",
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "drivers_interface_usb:libusb_proxy_1.2",
      "drivers_interface_usb:usb_idl_headers_1.2",
      "hilog:libhilog",
      "ipc:ipc_single",
      "safwk:system_ability_fwk",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "benchmark:benchmark",
    "googletest:gtest_main",
  ]
}

ohos_benchmarktest("usbmgr_port_test") {
  module_out_path = module_output_path

  sources = [
    "../native/service_unittest/src/usb_common_test.cpp",
    "usbmgr_benchmark_port_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "${usb_manager_path}/services:usbservice",
  ]

  if (is_standard_system) {
    external_deps = [
      "ability_base:want",
      "ability_runtime:ability_manager",
      "access_token:libaccesstoken_sdk",
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
      "bundle_framework:appexecfwk_base",
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "drivers_interface_usb:libusb_proxy_1.2",
      "drivers_interface_usb:usb_idl_headers_1.2",
      "hilog:libhilog",
      "ipc:ipc_single",
      "safwk:system_ability_fwk",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "benchmark:benchmark",
    "googletest:gtest_main",
  ]
}

ohos_benchmarktest("usbmgr_manage_test") {
  module_out_path = module_output_path

  sources = [
    "../native/service_unittest/src/usb_common_test.cpp",
    "usbmgr_benchmark_manage_test.cpp",
  ]

  configs = [
    "${utils_path}:utils_config",
    ":module_private_config",
  ]

  deps = [
    "${usb_manager_path}/interfaces/innerkits:usbsrv_client",
    "${usb_manager_path}/services:usbservice",
  ]

  if (is_standard_system) {
    external_deps = [
      "ability_base:want",
      "ability_runtime:ability_manager",
      "access_token:libaccesstoken_sdk",
      "access_token:libnativetoken",
      "access_token:libtoken_setproc",
      "bundle_framework:appexecfwk_base",
      "c_utils:utils",
      "common_event_service:cesfwk_innerkits",
      "drivers_interface_usb:libusb_proxy_1.2",
      "drivers_interface_usb:usb_idl_headers_1.2",
      "hilog:libhilog",
      "ipc:ipc_single",
      "safwk:system_ability_fwk",
    ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }
  external_deps += [
    "benchmark:benchmark",
    "googletest:gtest_main",
  ]
}

group("usbmgr_benchmark") {
    testonly = true
    deps = [
        ":usbmgr_host_test",
        ":usbmgr_device_test",
        ":usbmgr_port_test",
        ":usbmgr_manage_test",
    ]
}